full-fill-canary/full-fill-canary.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: simple-web
  name: simple-web
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: simple-web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: simple-web
  name: simple-web-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-web
      version: v1
  template:
    metadata:
      labels:
        app: simple-web
        version: v1
    spec:
      serviceAccountName: simple-web
      containers:
      - env:
        - name: "LISTEN_ADDR"
          value: "0.0.0.0:8080"
        - name: "UPSTREAM_URIS"
          value: "http://api:80/"
        - name: "SERVER_TYPE"
          value: "http"
        - name: "NAME"
          value: "simple-web"
        - name: "MESSAGE"
          value: "Web response from simple-web-1"
        - name: "HTTP_CLIENT_APPEND_REQUEST"
          value: "false"
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: registry.cn-hangzhou.aliyuncs.com/containerdemo/nicholasjackson-fake-service:v0.17.0
        imagePullPolicy: IfNotPresent
        name: simple-web
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        securityContext:
          privileged: false
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
  name: api
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api
  name: api-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
      version: v1
  template:
    metadata:
      labels:
        app: api
        version: v1
    spec:
      serviceAccountName: api
      containers:
      - env:
        - name: "LISTEN_ADDR"
          value: "0.0.0.0:8080"
        - name: "UPSTREAM_URIS"
          value: "grpc://currency:80, http://cache:80/abc/123123, http://payments:80"
        - name: "SERVER_TYPE"
          value: "http"
        - name: "NAME"
          value: "api"
        - name: "MESSAGE"
          value: "API response v1"
        - name: "UPSTREAM_WORKERS"
          value: "2"
        - name: "HTTP_CLIENT_APPEND_REQUEST"
          value: "false"
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: registry.cn-hangzhou.aliyuncs.com/containerdemo/nicholasjackson-fake-service:v0.17.0
        imagePullPolicy: IfNotPresent
        name: api
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        securityContext:
          privileged: false
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api
  name: api-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
      version: v2
  template:
    metadata:
      labels:
        app: api
        version: v2
    spec:
      serviceAccountName: api
      containers:
      - env:
        - name: "LISTEN_ADDR"
          value: "0.0.0.0:8080"
        - name: "UPSTREAM_URIS"
          value: "grpc://currency:80, http://cache:80/abc/123123, http://payments:80"
        - name: "SERVER_TYPE"
          value: "http"
        - name: "NAME"
          value: "api"
        - name: "MESSAGE"
          value: "API response v2"
        - name: "UPSTREAM_WORKERS"
          value: "2"
        - name: "HTTP_CLIENT_APPEND_REQUEST"
          value: "false"
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: registry.cn-hangzhou.aliyuncs.com/containerdemo/nicholasjackson-fake-service:v0.17.0
        imagePullPolicy: IfNotPresent
        name: api
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        securityContext:
          privileged: false
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cache
  name: cache
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: cache
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cache
  name: cache-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cache
      version: v1
  template:
    metadata:
      labels:
        app: cache
        version: v1
    spec:
      serviceAccountName: cache
      containers:
      - env:
        - name: "LISTEN_ADDR"
          value: "0.0.0.0:8080"
        - name: "SERVER_TYPE"
          value: "http"
        - name: "NAME"
          value: "cache"
        - name: "MESSAGE"
          value: "Cache response v1"
        - name: "HTTP_CLIENT_APPEND_REQUEST"
          value: "false" 
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: registry.cn-hangzhou.aliyuncs.com/containerdemo/nicholasjackson-fake-service:v0.17.0
        imagePullPolicy: IfNotPresent
        name: cache
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        securityContext:
          privileged: false
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: currency
  name: currency
spec:
  ports:
  - name: grpc
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: currency
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: currency
  name: currency-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: currency
      version: v1
  template:
    metadata:
      labels:
        app: currency
        version: v1
    spec:
      serviceAccountName: currency
      containers:
      - env:
        - name: "LISTEN_ADDR"
          value: "0.0.0.0:8080"
        - name: "SERVER_TYPE"
          value: "grpc"
        - name: "NAME"
          value: "currency"
        - name: "MESSAGE"
          value: "Currency response v1"
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: registry.cn-hangzhou.aliyuncs.com/containerdemo/nicholasjackson-fake-service:v0.17.0
        imagePullPolicy: IfNotPresent
        name: currency
        ports:
        - containerPort: 8080
          name: grpc
          protocol: TCP
        securityContext:
          privileged: false
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: payments
  name: payments
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: payments
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: payments
  name: payments-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments
      version: v1
  template:
    metadata:
      labels:
        app: payments
        version: v1
    spec:
      serviceAccountName: payments
      containers:
      - env:
        - name: "LISTEN_ADDR"
          value: "0.0.0.0:8080"
        - name: "UPSTREAM_URIS"
          value: "grpc://currency:80 ,http://billing:80"
        - name: "SERVER_TYPE"
          value: "http"
        - name: "NAME"
          value: "payments"
        - name: "MESSAGE"
          value: "Payments response v1"
        - name: "UPSTREAM_WORKERS"
          value: "2"
        - name: "HTTP_CLIENT_APPEND_REQUEST"
          value: "false"
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: registry.cn-hangzhou.aliyuncs.com/containerdemo/nicholasjackson-fake-service:v0.17.0
        imagePullPolicy: IfNotPresent
        name: payments
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        securityContext:
          privileged: false
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: payments
  name: payments-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments
      version: v2
  template:
    metadata:
      labels:
        app: payments
        version: v2
    spec:
      serviceAccountName: payments
      containers:
      - env:
        - name: "LISTEN_ADDR"
          value: "0.0.0.0:8080"
        - name: "UPSTREAM_URIS"
          value: "grpc://currency:80, http://billing:80"
        - name: "SERVER_TYPE"
          value: "http"
        - name: "NAME"
          value: "payments"
        - name: "MESSAGE"
          value: "Payments response v2"
        - name: "UPSTREAM_WORKERS"
          value: "2"
        - name: "HTTP_CLIENT_APPEND_REQUEST"
          value: "false"
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: registry.cn-hangzhou.aliyuncs.com/containerdemo/nicholasjackson-fake-service:v0.17.0
        imagePullPolicy: IfNotPresent
        name: payments
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        securityContext:
          privileged: false
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: billing
  name: billing
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: billing
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: billing
  name: billing-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: billing
      version: v1
  template:
    metadata:
      labels:
        app: billing
        version: v1
    spec:
      serviceAccountName: billing
      containers:
      - env:
        - name: "LISTEN_ADDR"
          value: "0.0.0.0:8080"
        - name: "SERVER_TYPE"
          value: "http"
        - name: "NAME"
          value: "billing"
        - name: "MESSAGE"
          value: "Billing response v1"
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: registry.cn-hangzhou.aliyuncs.com/containerdemo/nicholasjackson-fake-service:v0.17.0
        imagePullPolicy: IfNotPresent
        name: billing
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        securityContext:
          privileged: false
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: billing
  name: billing-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: billing
      version: v2
  template:
    metadata:
      labels:
        app: billing
        version: v2
    spec:
      serviceAccountName: currency
      containers:
      - env:
        - name: "LISTEN_ADDR"
          value: "0.0.0.0:8080"
        - name: "SERVER_TYPE"
          value: "http"
        - name: "NAME"
          value: "billing"
        - name: "MESSAGE"
          value: "Billing response v2"
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: registry.cn-hangzhou.aliyuncs.com/containerdemo/nicholasjackson-fake-service:v0.17.0
        imagePullPolicy: IfNotPresent
        name: billing
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        securityContext:
          privileged: false
