full-fill-canary/full-fill-canary-config.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-vs
spec: 
  hosts:
  - "api"
  http:
  - route:
    - destination:
        host: api
        subset: version-v1
      weight: 70
    - destination:
        host: api
        subset: version-v2
      weight: 30
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: api-dr
spec:
  host: api
  subsets:
  - name: version-v1
    labels:
      version: v1
  - name: version-v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: payments-vs
spec:
  hosts:
  - "payments"
  http:
  - match:
    - headers:
        user:
          exact: "mark"
    route:
    - destination:
        host: payments
        subset: version-v2
  - route:
    - destination:
        host: payments
        subset: version-v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: payments-dr
spec:
  host: payments
  subsets:
  - name: version-v1
    labels:
      version: v1
  - name: version-v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: billing-vs
spec:
  hosts:
  - "billing"
  http:
  - match:
    - headers:
        user:
          exact: "mark"
    route:
    - destination:
        host: billing
        subset: version-v2
  - route:
    - destination:
        host: billing
        subset: version-v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: billing-dr
spec:
  host: billing
  subsets:
  - name: version-v1
    labels:
      version: v1
  - name: version-v2
    labels:
      version: v2
